fix overflow

--- a/app/assets/stylesheets/ghost_page.scss
+++ b/app/assets/stylesheets/ghost_page.scss
@@ -98,6 +98,11 @@
   overflow: hidden;
 }
 
+.category-details {
+  width: 250px;
+  overflow: scroll;
+}
+
 #manage-category-remove {
   padding: 5px;
   border-radius: 7%;
